--- a/ic.html
+++ b/ic.html
@@ -1,18 +1,76 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1/new.min.css">
+    <link href="./css/ic.css" rel="stylesheet">
+</head>
 
 <body>
-    <button id="C">C</button>
-    <button id="Cm">Cm</button>
-    <button id="D">D</button>
-    <button id="Dm">Dm</button>
-    <button id="F">F</button>
-    <button id="Fm">Fm</button>
-    <button id="G">G</button>
-    <button id="Gm">Gm</button>
-    <button>play</button>
+    <div id="header" class="container">
+        <div class="cell"></div>
+        <div class="cell">Ⅰ</div>
+        <div class="cell">Ⅱ</div>
+        <div class="cell">Ⅲ</div>
+        <div class="cell">Ⅳ</div>
+        <div class="cell">Ⅴ</div>
+        <div class="cell">Ⅵ</div>
+        <div class="cell">Ⅶ</div>
+    </div>
+    <div id="c_scale" class="container">
+        <div class="cell">C</div>
+        <div class="cell"><button name="C" class="chordButton">C</button></div>
+        <div class="cell"><button name="Dm" class="chordButton">Dm</button></div>
+        <div class="cell"><button name="Em" class="chordButton">Em</div>
+        <div class="cell"><button name="F" class="chordButton">F</button></div>
+        <div class="cell"><button name="G" class="chordButton">G</button></div>
+        <div class="cell"><button name="Am" class="chordButton">Am</div>
+        <div class="cell"><button name="Bm-5" class="chordButton">Bm-5</div>
+    </div>
+    <div id="cm_scale" class="container">
+        <div class="cell">Cm</div>
+        <div class="cell"><button name="Cm" class="chordButton">Cm</button></div>
+        <div class="cell"><button name="Dm-5" class="chordButton">Dm-5</button></div>
+        <div class="cell"><button name="Eb" class="chordButton">Eb</div>
+        <div class="cell"><button name="Fm" class="chordButton">Fm</button></div>
+        <div class="cell"><button name="Gm" class="chordButton">Gm</button></div>
+        <div class="cell"><button name="Ab" class="chordButton">Ab</div>
+        <div class="cell"><button name="Bb" class="chordButton">Bb</div>
+    </div>
+    <div id="settings">
+        <div class="container">
+            <div class="cell">
+                <select id="scale-select">
+                    <option value="C">C</option>
+                    <option value="D">D</option>
+                    <option value="E">E</option>
+                    <option value="F">F</option>
+                    <option value="G">G</option>
+                    <option value="A">A</option>
+                    <option value="B">B</option>
+                </select>
+            </div>
+            <div class="minCell"></div>
+            <div class="cell">
+                変化記号：
+                <input type="radio" id="accidental1" name="accidental" value="-">
+                <label for="accidental1">-</label>
+                <input type="radio" id="accidental2" name="accidental" value="#">
+                <label for="accidental2">#</label>
+                <input type="radio" id="accidental3" name="accidental" value="b">
+                <label for="accidental3">b</label>
+            </div>
+            <div class="minCell"></div>
+            <div class="cell">
+                長短：
+                <input type="radio" id="key1" name="key" value="M">
+                <label for="key1">長調</label>
+                <input type="radio" id="key2" name="key" value="m">
+                <label for="key2">短調</label>
+            </div>
+        </div>
+    </div>
+
     <script src="https://unpkg.com/tone@14.7.77/build/Tone.js"></script>
     <script src="./js/ic.js"></script>
 </body>
