ホ長調を追加

--- a/ic.html
+++ b/ic.html
@@ -25,17 +25,27 @@
         <div class="cell"><button name="F" class="chordButton">F</button></div>
         <div class="cell"><button name="G" class="chordButton">G</button></div>
         <div class="cell"><button name="Am" class="chordButton">Am</div>
-        <div class="cell"><button name="Bm-5" class="chordButton">Bm-5</div>
+        <div class="cell"><button name="Bmb5" class="chordButton">Bm-5</div>
     </div>
     <div id="cm_scale" class="container">
         <div class="cell">Cm</div>
         <div class="cell"><button name="Cm" class="chordButton">Cm</button></div>
-        <div class="cell"><button name="Dm-5" class="chordButton">Dm-5</button></div>
+        <div class="cell"><button name="Dmb5" class="chordButton">Dm-5</button></div>
         <div class="cell"><button name="Eb" class="chordButton">Eb</div>
         <div class="cell"><button name="Fm" class="chordButton">Fm</button></div>
         <div class="cell"><button name="Gm" class="chordButton">Gm</button></div>
         <div class="cell"><button name="Ab" class="chordButton">Ab</div>
         <div class="cell"><button name="Bb" class="chordButton">Bb</div>
+    </div>
+    <div id="e_scale" class="container">
+        <div class="cell">E</div>
+        <div class="cell"><button name="E" class="chordButton">E</button></div>
+        <div class="cell"><button name="Fsm" class="chordButton">F#m</button></div>
+        <div class="cell"><button name="Gsm" class="chordButton">G#m</div>
+        <div class="cell"><button name="A" class="chordButton">A</button></div>
+        <div class="cell"><button name="B" class="chordButton">B</button></div>
+        <div class="cell"><button name="Csm" class="chordButton">C#m</div>
+        <div class="cell"><button name="Dsmb5" class="chordButton">D#m-5</div>
     </div>
     <div id="settings">
         <div class="container">
@@ -49,24 +59,6 @@
                     <option value="A">A</option>
                     <option value="B">B</option>
                 </select>
-            </div>
-            <div class="minCell"></div>
-            <div class="cell">
-                変化記号：
-                <input type="radio" id="accidental1" name="accidental" value="-">
-                <label for="accidental1">-</label>
-                <input type="radio" id="accidental2" name="accidental" value="#">
-                <label for="accidental2">#</label>
-                <input type="radio" id="accidental3" name="accidental" value="b">
-                <label for="accidental3">b</label>
-            </div>
-            <div class="minCell"></div>
-            <div class="cell">
-                長短：
-                <input type="radio" id="key1" name="key" value="M">
-                <label for="key1">長調</label>
-                <input type="radio" id="key2" name="key" value="m">
-                <label for="key2">短調</label>
             </div>
         </div>
     </div>
