シンセサイザーオブジェクトをグローバルに修正

--- a/ic.html
+++ b/ic.html
@@ -47,6 +47,16 @@
         <div class="cell"><button name="Csm" class="chordButton">C#m</div>
         <div class="cell"><button name="Dsmb5" class="chordButton">D#m-5</div>
     </div>
+    <div id="ab_scale" class="container">
+        <div class="cell">Ab</div>
+        <div class="cell"><button name="Ab" class="chordButton">Ab</button></div>
+        <div class="cell"><button name="Bbm" class="chordButton">Bbm</button></div>
+        <div class="cell"><button name="Cm" class="chordButton">Cm</div>
+        <div class="cell"><button name="Db" class="chordButton">Db</button></div>
+        <div class="cell"><button name="Eb" class="chordButton">Eb</button></div>
+        <div class="cell"><button name="Fm" class="chordButton">Fm</div>
+        <div class="cell"><button name="Gmb5" class="chordButton">Gmb5</div>
+    </div>
     <div id="settings">
         <div class="container">
             <div class="cell">
