--- a/ic.html
+++ b/ic.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>株式会社イルカくん TOPページ</title>
+    <title>イルカくんコード</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1/new.min.css">
     <link href="./css/ic.css" rel="stylesheet">
     <script src="https://unpkg.com/tone@14.7.77/build/Tone.js"></script>
