--- a/ic.html
+++ b/ic.html
@@ -12,86 +12,6 @@
 </head>
 
 <body>
-    <div id="header" class="container">
-        <div class="cell"></div>
-        <div class="cell">Ⅰ</div>
-        <div class="cell">Ⅱ</div>
-        <div class="cell">Ⅲ</div>
-        <div class="cell">Ⅳ</div>
-        <div class="cell">Ⅴ</div>
-        <div class="cell">Ⅵ</div>
-        <div class="cell">Ⅶ</div>
-    </div>
-    <div id="c_scale" class="container">
-        <div class="cell">C</div>
-        <div class="cell"><button name="C" class="chordButton">C</button></div>
-        <div class="cell"><button name="Dm" class="chordButton">Dm</button></div>
-        <div class="cell"><button name="Em" class="chordButton">Em</button></div>
-        <div class="cell"><button name="F" class="chordButton">F</button></div>
-        <div class="cell"><button name="G" class="chordButton">G</button></div>
-        <div class="cell"><button name="Am" class="chordButton">Am</button></div>
-        <div class="cell"><button name="Bmb5" class="chordButton">Bm-5</button></div>
-    </div>
-    <div id="cm_scale" class="container">
-        <div class="cell">Cm</div>
-        <div class="cell"><button name="Cm" class="chordButton">Cm</button></div>
-        <div class="cell"><button name="Dmb5" class="chordButton">Dm-5</button></div>
-        <div class="cell"><button name="Eb" class="chordButton">Eb</button></div>
-        <div class="cell"><button name="Fm" class="chordButton">Fm</button></div>
-        <div class="cell"><button name="Gm" class="chordButton">Gm</button></div>
-        <div class="cell"><button name="Ab" class="chordButton">Ab</button></div>
-        <div class="cell"><button name="Bb" class="chordButton">Bb</button></div>
-    </div>
-    <div id="d_scale" class="container">
-        <div class="cell">D</div>
-        <div class="cell"><button name="D" class="chordButton">D</button></div>
-        <div class="cell"><button name="Em" class="chordButton">Em</button></div>
-        <div class="cell"><button name="Fsm" class="chordButton">F#m</button></div>
-        <div class="cell"><button name="G" class="chordButton">G</button></div>
-        <div class="cell"><button name="A" class="chordButton">A</button></div>
-        <div class="cell"><button name="Bm" class="chordButton">Bm</button></div>
-        <div class="cell"><button name="Csmb5" class="chordButton">Csm-5</button></div>
-    </div>
-    <div id="dm_scale" class="container">
-        <div class="cell">Dm</div>
-        <div class="cell"><button name="Dm" class="chordButton">Dm</button></div>
-        <div class="cell"><button name="Emb5" class="chordButton">Emb5</button></div>
-        <div class="cell"><button name="F" class="chordButton">F</button></div>
-        <div class="cell"><button name="Gm" class="chordButton">Gm</button></div>
-        <div class="cell"><button name="Am" class="chordButton">Am</button></div>
-        <div class="cell"><button name="Bb" class="chordButton">Bb</button></div>
-        <div class="cell"><button name="C" class="chordButton">C</button></div>
-    </div>
-    <div id="e_scale" class="container">
-        <div class="cell">E</div>
-        <div class="cell"><button name="E" class="chordButton">E</button></div>
-        <div class="cell"><button name="Fsm" class="chordButton">F#m</button></div>
-        <div class="cell"><button name="Gsm" class="chordButton">G#m</button></div>
-        <div class="cell"><button name="A" class="chordButton">A</button></div>
-        <div class="cell"><button name="B" class="chordButton">B</button></div>
-        <div class="cell"><button name="Csm" class="chordButton">C#m</button></div>
-        <div class="cell"><button name="Dsmb5" class="chordButton">D#m-5</button></div>
-    </div>
-    <div id="f_scale" class="container">
-        <div class="cell">E</div>
-        <div class="cell"><button name="F" class="chordButton">F</button></div>
-        <div class="cell"><button name="Gm" class="chordButton">Gm</button></div>
-        <div class="cell"><button name="Am" class="chordButton">Am</button></div>
-        <div class="cell"><button name="Bb" class="chordButton">Bb</button></div>
-        <div class="cell"><button name="C" class="chordButton">C</button></div>
-        <div class="cell"><button name="Dm" class="chordButton">Dm</button></div>
-        <div class="cell"><button name="Emb5" class="chordButton">Emb5</button></div>
-    </div>
-    <div id="ab_scale" class="container">
-        <div class="cell">Ab</div>
-        <div class="cell"><button name="Ab" class="chordButton">Ab</button></div>
-        <div class="cell"><button name="Bbm" class="chordButton">Bbm</button></div>
-        <div class="cell"><button name="Cm" class="chordButton">Cm</button></div>
-        <div class="cell"><button name="Db" class="chordButton">Db</button></div>
-        <div class="cell"><button name="Eb" class="chordButton">Eb</button></div>
-        <div class="cell"><button name="Fm" class="chordButton">Fm</button></div>
-        <div class="cell"><button name="Gmb5" class="chordButton">Gmb5</button></div>
-    </div>
     <div id="chordBox">
         <div class="container">
             <div class="cell">C</div>
@@ -178,17 +98,60 @@
             <div class="cell"><button name="Bbmb5" class="chordBoxButton">Bbmb5</button></div>
         </div>
     </div>
+    <div id="selected_scale">
+        <div id="header" class="container">
+            <div class="cell"></div>
+            <div class="cell">Ⅰ</div>
+            <div class="cell">Ⅱ</div>
+            <div class="cell">Ⅲ</div>
+            <div class="cell">Ⅳ</div>
+            <div class="cell">Ⅴ</div>
+            <div class="cell">Ⅵ</div>
+            <div class="cell">Ⅶ</div>
+        </div>
+        <div id="selected_major_scale" class="container">
+        </div>
+        <div id="selected_minor_scale" class="container">
+        </div>
+    </div>
     <div id="settings">
         <div class="container">
             <div class="cell">
-                <select id="scale-select">
+                <select id="major_scale_select">
+                    <option value="Cb">Cb</option>
                     <option value="C">C</option>
+                    <option value="Cs">C#</option>
+                    <option value="Db">Db</option>
                     <option value="D">D</option>
+                    <option value="Eb">Eb</option>
                     <option value="E">E</option>
                     <option value="F">F</option>
+                    <option value="Fs">F#</option>
+                    <option value="Gb">Gb</option>
                     <option value="G">G</option>
+                    <option value="Ab">Ab</option>
                     <option value="A">A</option>
+                    <option value="Bb">Bb</option>
                     <option value="B">B</option>
+                </select>
+            </div>
+            <div class="cell">
+                <select id="minor_scale_select">
+                    <option value="Cm">Cm</option>
+                    <option value="Cms">Cm#</option>
+                    <option value="Dm">Dm</option>
+                    <option value="Dms">Dm#</option>
+                    <option value="Emb">Emb</option>
+                    <option value="Em">Em</option>
+                    <option value="Fm">Fm</option>
+                    <option value="Fms">Fm#</option>
+                    <option value="Gm">Gm</option>
+                    <option value="Gms">Gm#</option>
+                    <option value="Amb">Amb</option>
+                    <option value="Am">Am</option>
+                    <option value="Ams">Am#</option>
+                    <option value="Bmb">Bmb</option>
+                    <option value="Bm">Bm</option>
                 </select>
             </div>
         </div>
