コード演奏を持続音に修正

--- a/ic.html
+++ b/ic.html
@@ -162,6 +162,7 @@
             <label for="major_radio">メジャー</label>
             <input type="radio" id="minor_radio" , name="major_or_minor" value="1">
             <label for="minor_radio">マイナー</label>
+            <button onclick="stop()">STOP</button>
         </div>
     </div>
 
