--- a/ic.html
+++ b/ic.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>イルカくんコード</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1/new.min.css">
     <link href="./css/ic.css" rel="stylesheet">
     <script src="https://unpkg.com/tone@14.7.77/build/Tone.js"></script>
     <script src="./js/const.js" defer></script>
@@ -100,69 +99,71 @@
             <div class="cell"><button name="Bbmb5" class="chordBoxButton">Bbmb5</button></div>
         </div>
     </div>
-    <div id="selected_scale">
-        <div id="header" class="container">
-            <div class="cell"></div>
-            <div class="cell">Ⅰ</div>
-            <div class="cell">Ⅱ</div>
-            <div class="cell">Ⅲ</div>
-            <div class="cell">Ⅳ</div>
-            <div class="cell">Ⅴ</div>
-            <div class="cell">Ⅵ</div>
-            <div class="cell">Ⅶ</div>
-        </div>
-        <div id="selected_major_scale" class="container">
-        </div>
-        <div id="selected_minor_scale" class="container">
-        </div>
-    </div>
-    <div id="settings">
-        <div class="container">
-            <div class="cell">
-                <select id="major_scale_select">
-                    <option value="Cb">Cb</option>
-                    <option value="C">C</option>
-                    <option value="Cs">C#</option>
-                    <option value="Db">Db</option>
-                    <option value="D">D</option>
-                    <option value="Eb">Eb</option>
-                    <option value="E">E</option>
-                    <option value="F">F</option>
-                    <option value="Fs">F#</option>
-                    <option value="Gb">Gb</option>
-                    <option value="G">G</option>
-                    <option value="Ab">Ab</option>
-                    <option value="A">A</option>
-                    <option value="Bb">Bb</option>
-                    <option value="B">B</option>
-                </select>
+    <div id="controlPanelBox">
+        <div id="selected_scale">
+            <div id="header" class="container">
+                <div class="cell"></div>
+                <div class="cell">Ⅰ</div>
+                <div class="cell">Ⅱ</div>
+                <div class="cell">Ⅲ</div>
+                <div class="cell">Ⅳ</div>
+                <div class="cell">Ⅴ</div>
+                <div class="cell">Ⅵ</div>
+                <div class="cell">Ⅶ</div>
             </div>
-            <div class="cell">
-                <select id="minor_scale_select">
-                    <option value="Cm">Cm</option>
-                    <option value="Cms">Cm#</option>
-                    <option value="Dm">Dm</option>
-                    <option value="Dms">Dm#</option>
-                    <option value="Emb">Emb</option>
-                    <option value="Em">Em</option>
-                    <option value="Fm">Fm</option>
-                    <option value="Fms">Fm#</option>
-                    <option value="Gm">Gm</option>
-                    <option value="Gms">Gm#</option>
-                    <option value="Amb">Amb</option>
-                    <option value="Am">Am</option>
-                    <option value="Ams">Am#</option>
-                    <option value="Bmb">Bmb</option>
-                    <option value="Bm">Bm</option>
-                </select>
+            <div id="selected_major_scale" class="container">
+            </div>
+            <div id="selected_minor_scale" class="container">
             </div>
         </div>
-        <div>
-            <input type="radio" id="major_radio" , name="major_or_minor" value="0" checked>
-            <label for="major_radio">メジャー</label>
-            <input type="radio" id="minor_radio" , name="major_or_minor" value="1">
-            <label for="minor_radio">マイナー</label>
-            <button onclick="stop()">STOP</button>
+        <div id="settings">
+            <div class="container">
+                <div class="cell">
+                    <select id="major_scale_select">
+                        <option value="Cb">Cb</option>
+                        <option value="C">C</option>
+                        <option value="Cs">C#</option>
+                        <option value="Db">Db</option>
+                        <option value="D">D</option>
+                        <option value="Eb">Eb</option>
+                        <option value="E">E</option>
+                        <option value="F">F</option>
+                        <option value="Fs">F#</option>
+                        <option value="Gb">Gb</option>
+                        <option value="G">G</option>
+                        <option value="Ab">Ab</option>
+                        <option value="A">A</option>
+                        <option value="Bb">Bb</option>
+                        <option value="B">B</option>
+                    </select>
+                </div>
+                <div class="cell">
+                    <select id="minor_scale_select">
+                        <option value="Cm">Cm</option>
+                        <option value="Cms">Cm#</option>
+                        <option value="Dm">Dm</option>
+                        <option value="Dms">Dm#</option>
+                        <option value="Emb">Emb</option>
+                        <option value="Em">Em</option>
+                        <option value="Fm">Fm</option>
+                        <option value="Fms">Fm#</option>
+                        <option value="Gm">Gm</option>
+                        <option value="Gms">Gm#</option>
+                        <option value="Amb">Amb</option>
+                        <option value="Am">Am</option>
+                        <option value="Ams">Am#</option>
+                        <option value="Bmb">Bmb</option>
+                        <option value="Bm">Bm</option>
+                    </select>
+                </div>
+            </div>
+            <div>
+                <input type="radio" id="major_radio" , name="major_or_minor" value="0" checked>
+                <label for="major_radio">メジャー</label>
+                <input type="radio" id="minor_radio" , name="major_or_minor" value="1">
+                <label for="minor_radio">マイナー</label>
+                <button onclick="stop()">STOP</button>
+            </div>
         </div>
     </div>
 
