入力したコード進行が表示されるようにした

--- a/ic.html
+++ b/ic.html
@@ -166,6 +166,9 @@
             </div>
         </div>
     </div>
+    <div id="chordProgressionBox">
+        <p id="chordProgression"></p>
+    </div>
 
 </body>
 
