ストップボタンなどもキーボード押下で押されるようにした

--- a/ic.html
+++ b/ic.html
@@ -162,7 +162,8 @@
                 <label for="major_radio">メジャー</label>
                 <input type="radio" id="minor_radio" , name="major_or_minor" value="1">
                 <label for="minor_radio">マイナー</label>
-                <button onclick="stop()">STOP</button>
+                <button id="stopButton" onclick="stop()">STOP</button>
+                <button id="clearButton" onclick="clearChordProgression()">CLEAR</button>
             </div>
         </div>
     </div>
