--- a/ic.html
+++ b/ic.html
@@ -117,6 +117,50 @@
             </div>
         </div>
         <div id="settings">
+            <div>
+                <input type="radio" id="rdnone" , name="add_chord" value="" checked>
+                <label class="rdLabel" for="rdnone">none</label>
+                <input type="radio" id="rdaug" name="add_chord" value="rdaug">
+                <label class="rdLabel" for="rdaug">aug</label>
+                <input type="radio" id="rd7" name="add_chord" value="rd7">
+                <label class="rdLabel" for="rd7">7</label>
+                <input type="radio" id="rdmaj7" name="add_chord" value="rdmaj7">
+                <label class="rdLabel" for="rdmaj7">maj7</label>
+                <input type="radio" id="rd6" name="add_chord" value="rd6">
+                <label class="rdLabel" for="rd6">6</label>
+                <input type="radio" id="rd9" name="add_chord" value="rd9">
+                <label class="rdLabel" for="rd9">9</label>
+                <input type="radio" id="rdmaj9" name="add_chord" value="rdmaj9">
+                <label class="rdLabel" for="rdmaj9">maj9</label>
+                <input type="radio" id="rd11" name="add_chord" value="rd11">
+                <label class="rdLabel" for="rd11">11</label>
+                <input type="radio" id="rdmaj11" name="add_chord" value="rdmaj11">
+                <label class="rdLabel" for="rdmaj11">maj11</label>
+            </div>
+            <div>
+                <input type="radio" id="rd13" name="add_chord" value="rd13">
+                <label class="rdLabel" for="rd13">13</label>
+                <input type="radio" id="rdmaj13" name="add_chord" value="rdmaj13">
+                <label class="rdLabel" for="rdmaj13">maj13</label>
+                <input type="radio" id="rdadd9" name="add_chord" value="rdadd9">
+                <label class="rdLabel" for="rdadd9">add9</label>
+                <input type="radio" id="rd69" name="add_chord" value="rd69">
+                <label class="rdLabel" for="rd69">6/9</label>
+                <input type="radio" id="rd7b5" name="add_chord" value="rd7b5">
+                <label class="rdLabel" for="rd7b5">7b5</label>
+                <input type="radio" id="rd7b9" name="add_chord" value="rd7b9">
+                <label class="rdLabel" for="rd7b9">7b9</label>
+                <input type="radio" id="rd7s9" name="add_chord" value="rd7s9">
+                <label class="rdLabel" for="rd7s9">7s9</label>
+                <input type="radio" id="rd5" name="add_chord" value="rd5">
+                <label class="rdLabel" for="rd5">5</label>
+                <input type="radio" id="rdsus4" name="add_chord" value="rdsus4">
+                <label class="rdLabel" for="rdsus4">sus4</label>
+                <input type="radio" id="rdsus2" name="add_chord" value="rdsus2">
+                <label class="rdLabel" for="rdsus2">sus2</label>
+                <input type="radio" id="rd7sus4" name="add_chord" value="rd7sus4">
+                <label class="rdLabel" for="rd7sus4">7sus4</label>
+            </div>
             <div class="container">
                 <div class="cell">
                     <select id="major_scale_select">
